--- a/index.html
+++ b/index.html
@@ -20,5 +20,22 @@
                 <a href="https://open.spotify.com/track/6DoOMNxfnSofgTg5wfQf57?si=7994ca32b00c406c" target="_blank">Stanna tiden</a>
             </li>
         </ul>
+        <dialog open>
+            <p><strong>GDPR</strong> nonsens</p>
+            <form method="dialog">
+                <button>OK</button>
+            </form>
+        </dialog>
+        <h3>Album</h3>
+        <p>När allt är över - 2017</p>
+        <a href="https://open.spotify.com/album/3fbtXxfBxsy9OJ09MA2p3j?si=soTt2ZXEQSqbtY0EzNiSMg"><img src="images/Album när allt är över.jpg" alt="Albumcover - När allt är över"></a> 
+        <h3>EP</h3>
+        <p>Rosta sönder - 2016</p>
+        <a href="https://open.spotify.com/album/5UMI7LVFl3NTBnp3aWQE2m?si=QSunMw7VROaJQ4IoOX8E4g"><img src="images/rosta sönder.jpg" alt="EP rosta sönder"></a>
+        <p>Allt blir nog bra - 2019</p>
+        <a href="https://open.spotify.com/album/1CjRhSQCpxWK1RVoMEh7sE?si=b0sgjp1zSH2f-tLNkZ66xQ"><img src="images/Allt blir nog bra.jpg" alt="EP allt blir nog bra"></a>
+        <br>
+        <a href="https://adrianrecordings.com/artists/svart-katt/" target="_blank"><img src="images/svart katt.jpg" alt="Bild på bandet"></a>
+        <h4>Klicka på bilden för att komma till bandets sida</h4>
     </body>
 </html>
