Added some text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h2>En liten och enkel fanpage åt bandet <i>Svart Katt</i></h2>
-        <H3>Har du aldrig hört bandet innan?</H3>
+        <br>
+        <H4>Har du aldrig hört bandet innan?</H4>
         <h4>Börja med att lyssna på dessa tre låtar</h4>
         <ul>
             <li>
@@ -26,6 +27,9 @@
                 <button>OK</button>
             </form>
         </dialog>
+        <h4> Lite info om bandet!</h4>
+        <p><i>Svart Katt</i> består av tre killar från Stockholm</p>
+        <p><i>Micke</i> på trummor <i>Robin</i> på bas och <i>Johan</i> på gitarr och sång</p>
         <h3>Album</h3>
         <ul>
             <li>
