Edited some text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h2>En liten och enkel fanpage åt bandet <i>Svart Katt</i></h2>
-        <br>
+        <hr>
         <H4>Har du aldrig hört bandet innan?</H4>
         <h4>Börja med att lyssna på dessa tre låtar</h4>
         <ul>
@@ -21,15 +21,12 @@
                 <a href="https://open.spotify.com/track/6DoOMNxfnSofgTg5wfQf57?si=7994ca32b00c406c" target="_blank">Stanna tiden</a>
             </li>
         </ul>
-        <dialog open>
-            <p><strong>GDPR</strong> nonsens</p>
-            <form method="dialog">
-                <button>OK</button>
-            </form>
-        </dialog>
+        <hr>
         <h4> Lite info om bandet!</h4>
-        <p><i>Svart Katt</i> består av tre killar från Stockholm</p>
-        <p><i>Micke</i> på trummor <i>Robin</i> på bas och <i>Johan</i> på gitarr och sång</p>
+        <p><i>Svart Katt</i> är ett punkband som består av tre killar från Stockholm</p>
+        <p><i>Micke</i> på trummor, <i>Robin</i> på bas och <i>Johan</i> på gitarr och sång</p>
+        <p></p>
+        <hr>
         <h3>Album</h3>
         <ul>
             <li>
@@ -48,6 +45,7 @@
         <a href="https://open.spotify.com/album/1CjRhSQCpxWK1RVoMEh7sE?si=b0sgjp1zSH2f-tLNkZ66xQ"><img src="images/Allt blir nog bra.jpg" alt="EP allt blir nog bra"></a>
         </li>
         </ul>
+        <hr>
         <br>
         <a href="https://adrianrecordings.com/artists/svart-katt/" target="_blank"><img src="images/svart katt.jpg" alt="Bild på bandet"></a>
         <h4>Klicka på bilden för att komma till bandets sida</h4>
