One last update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h4> Lite info om bandet!</h4>
         <p><i>Svart Katt</i> är ett punkband som består av tre killar från Stockholm</p>
         <p><i>Micke</i> på trummor, <i>Robin</i> på bas och <i>Johan</i> på gitarr och sång</p>
-        <p></p>
+        <p>Dem har ett tight sammarbete med producenten <i>Sommarkatten</i> som arbetar på studion <i>Talkback</i> i Östersund</p>
         <hr>
         <h3>Album</h3>
         <ul>
